--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,14 @@
 ***slogan.........
 ***contacts.......
 ***login..........
-***navigation.....
+***navigation-main.....
+*
+**FOOTER
+***footer logo
+***footer navigation
+***contacts-footer
+***feedback
+***изменение состояний элементов
 */
 
 
@@ -129,7 +136,6 @@ body {
       background: #ffffff url(../img/search-icon-focus.png) no-repeat 15px 13px;
       color: #000000;
     }
-    
     
     /*КНОПКА В СТРОКЕ ПОИСКА
     .serch__btn {
@@ -418,8 +424,8 @@ body {
 /*-------------END LOGIN-------------------------*/
       
 
-/*-------------------NAVIGATION------------------*/
-.navigation {
+/*-------------------navigation-main------------------*/
+.navigation-main {
     padding-left: 21px;
     padding-right: 24px;
     
@@ -430,16 +436,16 @@ body {
     list-style: none;
   }
 
-  .navigation__list {
+  .navigation-main__list {
     padding: 0;
     margin: 0;
   }
 
-    .navigation__item {
+    .navigation-main__item {
       display: inline-block;
     }
       
-      .navigation__link {
+      .navigation-main__link {
         display: block;
         padding: 20px 30px 16px 30px;
         
@@ -447,23 +453,182 @@ body {
         line-height: 17px;
       }
 
-        .navigation__link:hover {
+        .navigation-main__link:hover {
           background-color: #293449;
           cursor: pointer;
         }
 
 
-        .navigation__link:active {
+        .navigation-main__link:active {
           color: #84888e;
           background-color: #1d2739;
           box-shadow: 0 5px 0 0 #1d2739;
         }
+/*-----------------END navigation-main----------------*/
 
 
 
-/*-----------------END NAVIGATION----------------*/
 
 
+/*-----------------------------------------------*\
+          FOOTER
+\*-----------------------------------------------*/
+
+.footer__top {
+  padding-bottom: 50px;
+  color: #ffffff;
+  background-color: #32425c;
+}
+.footer__bottom {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #293449;
+
+    color: #ffffff;        
+  }
+
+
+  .footer__logo {
+    width: 220px;
+    display: inline-block;
+    margin-bottom: 33px;
+    /*outline: 2px solid red;*/
+  }
+    .logo__beeg {
+      padding: 17px;
+
+      font-size: 30px;
+      line-height: 30px;
+    }
+
+/*----------------footer navigation--------------*/
+  .navigation-footer ul {
+    margin: 0;
+    padding: 0;
+    
+    list-style: none;
+  }
+
+    .navigation-footer ul:last-child {
+      padding-left: 25px;
+    }
+
+    .navigation-footer li {
+      padding-top: 37px;
+      margin-left: 60px;
+
+    }
+    
+    .navigation-footer__link {
+      font-size: 18px;
+      line-height: 24px;
+
+      color: inherit;
+      text-decoration: none;
+    }
+    .navigation-footer ul:last-child .navigation-footer__link {
+      color: #f5ca7e;
+    }
+
+  /*---------------------------------------------*/
+
+
+  /*------------contacts-footer------------------*/
+  .contacts-footer {
+    font-style: normal;
+    padding-left: 3px;
+
+    font-size: 18px;
+    line-height: 24px;
+  }
+  /*---------------------------------------------*/
+
+
+  /*---------------copyright---------------------*/
+  .copyright {
+    font-size: 16px;
+    line-height: 18px;
+    padding-top: 15px;
+
+    font-style: normal;
+  }
+/*-----------------------------------------------*/
+
+
+/*---------------social--------------------------*/
+.social {
+  margin-left: 165px;
+  margin-right: 119px;
+  padding-bottom: 20px;
+}
+  .social-btn {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    font-size: 0;
+
+    border-radius: 50%;
+    background-color: #212a3a;
+  }
+    .social-btn_vk {
+      background: #212a3a url(../img/icon-vk.png) no-repeat 50% 50%;
+    }
+    .social-btn_fb {
+      background: #212a3a url(../img/icon-facebook.png) no-repeat 50% 50%;
+    }
+    .social-btn_inst {
+      background: #212a3a url(../img/icon-instagramm.png) no-repeat 50% 50%;
+    }
+
+/*-----------------------------------------------*/
+
+/*---------------feedback-----------------------*/
+.feedback  {
+  font-style: normal;
+  margin-right: 14px;
+  padding-top: 16px;
+
+  font-size: 16px;
+  line-height: 18px;
+}
+  .feedback a {
+    color: #ffd180;
+    text-decoration: none;
+  }
+/*-----------------------------------------------*/
+
+
+/*----------изменение состояния элементов--------*/
+.navigation-footer__link:hover {
+  text-decoration: underline;
+}
+
+.navigation-footer ul:first-child .navigation-footer__link:active {
+  text-decoration: none;
+  color: #77808f;
+}
+
+.navigation-footer ul:last-child .navigation-footer__link:active {
+  text-decoration: none;
+  color: #99866b;
+}
+
+
+.social-btn:hover,
+.social-btn:active {
+  background-color: #ee3643;
+}
+
+
+.feedback a:hover {
+  text-decoration: underline;
+}
+
+.feedback a:active {
+  text-decoration: none;
+  color: #db3644;
+}
+/*-----------------------------------------------*/
 
 
 
