--- a/css/style.css
+++ b/css/style.css
@@ -502,6 +502,7 @@ body {
     }
 
 /*----------------footer navigation--------------*/
+
   .navigation-footer ul {
     margin: 0;
     padding: 0;
@@ -517,6 +518,13 @@ body {
       padding-top: 37px;
       margin-left: 60px;
 
+    }
+     
+     /*убираю баг в сафари он определил больше размер navigation-footer чем
+     другие браузеры из-за чего текст contacts-footer обтекал зафлоаченый 
+     navigation-footer*/ 
+    .navigation-footer li:first-child {
+      margin-left: 0;
     }
     
     .navigation-footer__link {
